--- a/templates/snippet.html
+++ b/templates/snippet.html
@@ -1,8 +1,8 @@
 {% autoescape None %}
 <div class="panel panel-default">
-    <div class="panel-heading">
+    <h4 class="panel-heading">
         {{title}}
-    </div>
+    </h4>
     <div class="panel-body">
         {{snippet}}
     </div>
