Trying to fix those weird snippets

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <title>
-            {% try %}{{title}} {%except%}Yet Another CMS{%end%}
+            {% try %}{{title}} {%except%}Joshua Koike{%end%}
         </title>
         <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
         <link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
