--- a/templates/posts/2014/5/Hello,_World.html
+++ b/templates/posts/2014/5/Hello,_World.html
@@ -1,5 +1,6 @@
 {% block title %}Hello, World!{%end%}
 {% block content %}
+{% import datetime %}
 <p>So, I deployed this site to Heroku, then realized that because of the way I wrote it, I need posts for anything to work. Not exactly robust design, but easily fixed.<br/></p>
 <p>Since I've been working on this for the past week, I might as well make this post useful and talk about the technology behind it and why I decided to write an entire CMS (Although a pretty simple one).<br/></p>
 <h2>Tornado</h2>
@@ -14,7 +15,7 @@
 <h3>Templating Basics</h3>
 <p><h4>Statements</h4>
 A statement is surrounded by {{!}}. Any vaild python expression will work in these brackets. For example, the statement {{![i**2 for i in range(0, 4)]}} generates {{[i**2 for i in range(0, 4)]}}, as you might expect. While this is a simple example, this could easily be used to do more complicated things, such as display load times or interact with databases. Because these templates are compiled into actual python code, and not just interpreted as a subset of python, the limits are nearly
-endless<br/>
+endless. As an actually useful application, you loaded this page at {{datetime.datetime.today().strfdate("%x, %X")}}<br/>
 <h4>Directives</h4>
 A directive is surrounded in {%!%}. While statements must return a value (Would work in a print() statement), directives provide most of the constructs that statements can't provide. These include things like if blocks, for loops, imports, or try-except-finally blocks. This means that, at least in theory, you could define complex behaviors in a Tornado template.</p>
 <p>By no means is this a comprehensive, or even half decent, coverage of Tornado's capabilities. Tornado is also capable of serving websockets, along with being mostly modular meaning that for the most part, you can use as much or as little of the Tornado library as you want. If you want to really lean Tornado, look through the <a href="http://www.tornadoweb.org/en/stable/">documentation</a>. It's half decent, and provides a few examples. And if you want help, leave a comment or send me an
