--- a/templates/base.html
+++ b/templates/base.html
@@ -77,6 +77,7 @@
                 <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>{%end%}
             <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
             <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+            <script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js?lang=sql"></script>
         </div>
         <div id="footer">
             <span class="glyphicon glyphicon-copyright-mark"></span> 2014 Joshua Koike
