--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
         <title>
             {% try %}{{title}} {%except%}Joshua Koike{%end%}
         </title>
+        <meta name="google-site-verification" content="pjn--2qeu8g3MFfbiOWtHJKANdP23Oo24nP75RaVcNQ" />
         <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
         <link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
         <link href="{{static_url('style.css')}}" rel="stylesheet"/>
