(Hopefully) fixed ssl stupidness

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,8 +6,8 @@
             {% try %}{{title}} {%except%}Joshua Koike{%end%}
         </title>
         <meta name="google-site-verification" content="pjn--2qeu8g3MFfbiOWtHJKANdP23Oo24nP75RaVcNQ" />
-        <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
-        <link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
+        <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
+        <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
         <link href="{{static_url('style.css')}}" rel="stylesheet"/>
     </head>
     <body>
@@ -70,7 +70,7 @@
                  })();
         </script>
             <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-                <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>{%end%}
+                <a href="//disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>{%end%}
             <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
             <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
             <script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js?lang=sql"></script>
