Add another blog post and stuffs

--- a/templates/base.html
+++ b/templates/base.html
@@ -74,6 +74,7 @@
             <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
             <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
             <script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js?lang=sql"></script>
+            <script src="{{static_url('processing.min.js')}}"></script>
         </div>
         <div id="footer">
             <span class="glyphicon glyphicon-copyright-mark"></span> 2014 Joshua Koike
